src/sass/modal.scss
.modal-open {
    .modal-below {
        top: 0;
        left: 0;
        width: 100%;
        position: fixed;
    }

    .modal-above {
        min-height: 100vh;
        min-width: 100%;
        background: $color-black;
        position: relative
    }
}


.expand-modal {
    &-open {
        @extend .ttl-xs;

        border: none;
        box-sizing: border-box;
        position: absolute;
        bottom: 0;
        left: 50%;
        transform: translate(-50%, -50%);
        text-transform: uppercase;
        width: 55%;
        padding: to-rem(0) to-rem($F8);
        background-color: var(--black);
        color: var(--white);
        cursor: pointer;
        height: to-rem($F9);
        line-height: to-rem($F9);
        margin-bottom: to-rem($F7);

        @include layout-1024() {
            text-transform: initial;
            max-width: to-rem($F14);
            border: 1px solid var(--grey-2);
            border-radius: to-rem($F8);
        }

        @include layout-1440() {
            bottom: initial;
            border-radius: to-rem($F9);
            max-width: to-rem($F13);
            top: 50%;
        }

        @include layout-1440() {
            bottom: initial;
            border-radius: to-rem($F9);
            max-width: to-rem($F13);
            top: 50%;
            height: to-rem($F10);
            line-height: to-rem($F10);
        }

        &:hover,
        &:focus {
            text-decoration: line-through;
        }
    }

    &-close-bar {
        @extend %MAXAREA;
        left: 0;
        top: to-rem($F7);
        position: fixed;
        justify-content: space-between;
        display: flex;
        box-sizing: border-box;
        width: 100%;
        z-index: 100;
        justify-content: flex-end;


        &-button {
            @extend .ttl-xs;

            color: var(--grey);
            font-weight: 700;
            cursor: pointer;
            z-index: 1;
        }
    }


    &-close-area {
        @extend %MAXAREA;

        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }

    &-close-bottom {
        @extend .ttl-sm;

        margin: to-rem($F8);
        position: absolute;
        color: var(--white);
        left: 50%;
        transform: translateX(-50%);
        cursor: pointer;
    }

    &-content {
        box-sizing: border-box;
        position: relative;
        overflow-x: scroll;
        background-color: var(--black);
        padding: to-rem($F10) to-rem($F8);

        @include layout-1024() {
            padding: to-rem($F12);
        }
    }

    &-media {
        border-radius: to-rem($F5);
        width: auto;
        height: auto;
        max-width: 100%;
        position: relative;
        display: block;
        margin: 0 auto;
    }

    &-image,
    &-video {
        max-width: 100%;
    }
}

